# fastapi-restful-extension

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: docs.yml  main.yml  publish.yml  test.yml
docs/: get-help.md  index.md  installation.md  release-notes.md
docs/user-guide/: minimal-api.md  resourceful.md  versions.md
fastapi_restful/: __init__.py  api.py  main.py  resource.py  utils.py
get-help/: index.html
installation/: index.html
release-notes/: index.html
scripts/: run_formatters  run_linters  run_tests
search/: search_index.json
tests/: conftest.py  test_api.py  test_main.py  test_resource.py  test_utils.py
user-guide/minimal-api/: index.html
user-guide/resourceful/: index.html
user-guide/versions/: index.html
